# fileformat

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE-THIRD-PARTY  README.md
doc/: doxygen.h
include/cpdetect/: cptypes.h  settings.h
include/cpdetect/compiler_detector/: compiler_detector.h
include/cpdetect/compiler_detector/heuristics/: heuristics.h  pe_heuristics.h
include/fileformat/file_format/intel_hex/intel_hex_parser/: intel_hex_parser.h
src/: CMakeLists.txt
src/ar-extractor/: CMakeLists.txt  archive_wrapper.cpp
src/ar-extractortool/: CMakeLists.txt
src/cpdetect/: CMakeLists.txt  cptypes.cpp
src/cpdetect/compiler_detector/: coff_compiler.cpp  compiler_detector.cpp  elf_compiler.cpp  intel_hex_compiler.cpp  macho_compiler.cpp  pe_compiler.cpp  raw_data_compiler.cpp
src/cpdetect/compiler_detector/heuristics/: heuristics.cpp  pe_heuristics.cpp
src/crypto/: CMakeLists.txt
src/fileformat/: CMakeLists.txt
src/fileformat/file_format/intel_hex/intel_hex_parser/: intel_hex_parser.cpp
src/fileinfo/: CMakeLists.txt
src/loader/: CMakeLists.txt
src/macho-extractor/: CMakeLists.txt
src/macho-extractortool/: CMakeLists.txt
src/unpacker/: CMakeLists.txt
src/unpackertool/: CMakeLists.txt
src/unpackertool/plugins/mpress/: CMakeLists.txt
src/unpackertool/plugins/upx/: CMakeLists.txt
tests/: CMakeLists.txt
